deployment/k3s/monitoring/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-add-aidc-prefix
  namespace: monitoring
spec:
  replacePathRegex:
    regex: ^/grafana(.*)
    replacement: /proxy/80/grafana$1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-grafana-add-aidc-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
